# Bay_Window_Maker

./: .gitignore  CLAUDE.md  bay_window_calculator.py  bay_window_calculator_with_svg.py  bay_window_svg_renderer.py  instructions.txt  pyproject.toml  test_bay_window_calculator.py
